# CPP_modules

./: .gitignore  CMakeLists.txt  gitignore.sh
module00/ex00/: Makefile  megaphone  megaphone.cpp
module00/ex01/: Contacts.cpp  Contacts.hpp  Makefile  Phonebook.cpp  Phonebook.hpp  main.cpp  phonebook
module00/ex02/: Account.cpp  Makefile  account
module01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  randomChump.cpp  zombie
module01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  main.cpp
module01/ex02/: Makefile  main.cpp
module01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
module01/ex04/: Makefile  in  in.replace  main.cpp
module01/ex05/: Karen.cpp  Makefile  main.cpp
module01/ex06/: Karen.cpp  Karen.hpp  Makefile  main.cpp
module02/ex00/: Fixed.hpp  Makefile  main.cpp
module02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
module02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
module02/ex03/: Fixed.cpp  Fixed.hpp  Makefile  Point.cpp  Point.hpp  bsp.cpp  main.cpp
module03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
module03/ex01/: ClapTrap.cpp  ClapTrap.hpp  Makefile  ScavTrap.cpp  main.cpp
module03/ex02/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex03/: ClapTrap.cpp  ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.hpp  clapTrap  main.cpp
module04/ex01/: Animal.cpp  Animal.hpp  Brain.hpp  Cat.cpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.hpp  WrongCat.cpp  main.cpp
module04/ex02/: Animal.cpp  Animal.hpp  Brain.cpp  Cat.hpp  Dog.cpp  Makefile  main.cpp
module04/ex03/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  Makefile  MateriaSource.cpp  (+3 more)
(+76 files in other folders)
